tests/ui/recv-borrow-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/recv-borrow-endpoint-alias.rs:47:22
   |
45 |     let payload = futures::executor::block_on(endpoint.recv::<g::Msg<7, FramePayload>>())
   |                                               -------- first mutable borrow occurs here
46 |         .expect("test setup");
47 |     let flow_again = endpoint.flow::<g::Msg<8, u8>>().expect("test setup");
   |                      ^^^^^^^^ second mutable borrow occurs here
48 |     core::hint::black_box(&flow_again);
49 |     core::hint::black_box(&payload);
   |                           -------- first borrow later used here
